--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="css/main.css">
     <!-- Todo lo que se coloque aquí será visible en la página web -->
     <header>
         <h1>Portafolio Profesional</h1>
@@ -14,17 +15,19 @@
 
     </header>
     <!-- Menu de navegación -->
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre mí</a>
-        <a href="#">Mi Experiencia</a>
-        <a href="#">Contacto</a>
+    <nav class="lista-proyectos">
+        <a href="#bienvenida">Sobre mi</a>
+        <a href="#proyectos">Proyectos Tecnologicos</a>
+        <a href="#competencias">Mi Experiencia</a>
+        <a href="#contacto">Contacto</a>
     </nav>
     <!-- Contenido principal -->
     <main>
-        <section>
+        <section id="bienvenida">
             <h2>Bienvenidos a mi portafolio Profesional</h2>
-            <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido
+            <p>Mi nombre es <mark>Ocampo Garcia Angel Fernando</mark> soy especialista en <strong>Tecnologías de la
+                    información</strong>. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de
+                texto. Lorem Ipsum ha sido
                 el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona
                 que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró
                 hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de
@@ -32,11 +35,81 @@
                 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
                 recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
                 de Lorem Ipsum.</p>
-                <img src="https://images.pexels.com/photos/2558605/pexels-photo-2558605.jpeg" alt="Foto de perfil" width="500" height="300">
+            <p>Mi <small>Frase favorita es:</small> <i>"La perseverancia es la clave del éxito."</i></p>
+            <img src="images/FotoPersonal.png" alt="Foto de perfil"
+                width="250" height="300">
+        </section>
+        <section id="proyectos">
+            <h2>Proyectos Tecnológicos</h2>
+            <div class="lista-proyectos">
+                <article class="proyecto">
+                    <h3>Sistemas de Estadias</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam totam sit nisi quis laboriosam
+                        veniam.
+                    </p>
+                </article>
+                <article class="proyecto">
+                    <h3>Sistemas de Veterinarias</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam totam sit nisi quis laboriosam
+                        veniam.
+                    </p>
+                </article>
+                <article class="proyecto">
+                    <h3>Sistemas de Florerias</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam totam sit nisi quis laboriosam
+                        veniam.
+                    </p>
+                </article>
+            </div>
+        </section>
+        <section id="competencias">
+            <h2>Competencias Profesionales</h2>
+            <h3>Tecnologías y Lenguajes</h3>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>C#</li>
+            </ul>
+            <h3>Dominio de Habilidades</h3>
+            <div>
+                <label>HTML</label>
+                <progress min="0" max="100" value="50">50%</progress>
+            </div>
+            <div>
+                <label>CSS</label>
+                <progress min="0" max="100" value="50">50%</progress>
+            </div>
+            <div>
+                <label>JavaScript</label>
+                <progress min="0" max="100" value="50">50%</progress>
+            </div>
+        </section>
+        <section id="contacto">
+
+            <h2>Contactame</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse id eum voluptatum asperiores mollitia
+                possimus recusandae delectus quaerat, provident ex!</p>
+            <form>
+                <div class="campos">
+                    <label>Nombre Completo</label>
+                    <input type="text" value="Ingresa tu nombre">
+                </div>
+                <div class="campos">
+                    <label>Telefono</label>
+                    <input type="text" value="Ingresa tu telefono">
+                </div>
+                <div class="campos">
+                    <button type="submit">Enviar</button>
+                </div>
+            </form>
         </section>
     </main>
     <footer>
-        <p>2025 Todos los derechos reservados &copy; 2024</p>
+        <p>&copy; 2025 Todos los derechos reservados </p>
     </footer>
 </body>
 
