--- a/index.html
+++ b/index.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Este es un comentario -->
+<html lang="es">
 
 <head>
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portafolio Profesional - Ángel Fernando</title>
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <link rel="stylesheet" href="css/main.css">
-    <!-- Todo lo que se coloque aquí será visible en la página web -->
+
     <header>
         <h1>Portafolio Profesional</h1>
         <h4>Ocampo Garcia Angel Fernando</h4>
-
-
     </header>
-    <!-- Menu de navegación -->
-    <nav class="lista-proyectos">
+
+    <nav>
         <a href="#bienvenida">Sobre mi</a>
         <a href="#proyectos">Proyectos Tecnologicos</a>
         <a href="#competencias">Mi Experiencia</a>
         <a href="#contacto">Contacto</a>
     </nav>
-    <!-- Contenido principal -->
+
     <main>
-        <section id="bienvenida">
-            <h2>Bienvenidos a mi portafolio Profesional</h2>
-            <p>Mi nombre es <mark>Ocampo Garcia Angel Fernando</mark> soy especialista en <strong>Tecnologías de la
-                    información</strong>. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de
-                texto. Lorem Ipsum ha sido
-                el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona
-                que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró
-                hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de
-                relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los
-                60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
-                recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
-                de Lorem Ipsum.</p>
-            <p>Mi <small>Frase favorita es:</small> <i>"La perseverancia es la clave del éxito."</i></p>
-            <img src="images/FotoPersonal.png" alt="Foto de perfil"
-                width="250" height="300">
+
+        <section id="bienvenida" class="contenedor_seccion">
+            <h2>Bienvenidos a mi Portafolio Profesional</h2>
+            <p>Mi nombre es <mark>Ocampo García Angel Fernando</mark>, soy un joven apasionado por las
+                <strong>Tecnologías de la Información</strong> y actualmente estudiante universitario en la
+                <strong>UT</strong>. Desde mis primeras experiencias académicas, descubrí mi interés por la programación
+                y el desarrollo de software, lo que me llevó a formarme con disciplina y ética para alcanzar mis metas.
+            </p>
+            <p>Mi <small>frase favorita es:</small> <i>"No digo esto porque esté pasando necesidad, pues he aprendido a estar contento sean cual sean mis circunstancias."</i></p>
+
+            <img src="images/FotoPersonal.png" alt="Fotografía de Ocampo Garcia Angel Fernando." width="250"
+                height="300">
         </section>
-        <section id="proyectos">
+
+        <section id="proyectos" class="contenedor_seccion">
             <h2>Proyectos Tecnológicos</h2>
-            <div class="lista-proyectos">
-                <article class="proyecto">
+
+            <div class="lista_proyectos">
+                <article class="contenedor_proyecto">
                     <h3>Sistemas de Estadias</h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam totam sit nisi quis laboriosam
                         veniam.
                     </p>
                 </article>
-                <article class="proyecto">
+                <article class="contenedor_proyecto">
                     <h3>Sistemas de Veterinarias</h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam totam sit nisi quis laboriosam
                         veniam.
                     </p>
                 </article>
-                <article class="proyecto">
+                <article class="contenedor_proyecto">
                     <h3>Sistemas de Florerias</h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam totam sit nisi quis laboriosam
@@ -65,52 +65,63 @@
                 </article>
             </div>
         </section>
-        <section id="competencias">
-            <h2>Competencias Profesionales</h2>
-            <h3>Tecnologías y Lenguajes</h3>
-            <ul>
-                <li>HTML5</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>C#</li>
-            </ul>
-            <h3>Dominio de Habilidades</h3>
-            <div>
-                <label>HTML</label>
-                <progress min="0" max="100" value="50">50%</progress>
-            </div>
-            <div>
-                <label>CSS</label>
-                <progress min="0" max="100" value="50">50%</progress>
-            </div>
-            <div>
-                <label>JavaScript</label>
-                <progress min="0" max="100" value="50">50%</progress>
-            </div>
-        </section>
-        <section id="contacto">
 
-            <h2>Contactame</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse id eum voluptatum asperiores mollitia
-                possimus recusandae delectus quaerat, provident ex!</p>
+        <section id="competencias" class="contenedor_seccion">
+            <h2>Competencias Profesionales</h2>
+
+            <div id="habilidades_tecnicas">
+                <h3>Tecnologías y Lenguajes</h3>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>C#</li>
+                </ul>
+            </div>
+
+            <hr>
+
+            <h3>Dominio de Habilidades</h3>
+            <figure>
+                <label for="progress-html">HTML</label>
+                <progress id="progress-html" min="0" max="100" value="70">70%</progress>
+            </figure>
+            <figure>
+                <label for="progress-css">CSS</label>
+                <progress id="progress-css" min="0" max="100" value="60">60%</progress>
+            </figure>
+            <figure>
+                <label for="progress-js">JavaScript</label>
+                <progress id="progress-js" min="0" max="100" value="40">40%</progress>
+            </figure>
+        </section>
+
+        <section id="contacto" class="contenedor_seccion">
+            <h2>Contáctame</h2>
+            <p>Correo Electrónico: angelferocampo@outlook.com</p>
+            <p>Tel: +52 5528869942</p>
+
             <form>
-                <div class="campos">
-                    <label>Nombre Completo</label>
-                    <input type="text" value="Ingresa tu nombre">
+                <div class="campo_formulario">
+                    <label for="nombre-completo">Nombre Completo</label>
+                    <input type="text" id="nombre-completo" placeholder="Ingresa tu nombre" required>
                 </div>
-                <div class="campos">
-                    <label>Telefono</label>
-                    <input type="text" value="Ingresa tu telefono">
+                <div class="campo_formulario">
+                    <label for="telefono">Teléfono</label>
+                    <input type="tel" id="telefono" placeholder="Ingresa tu teléfono">
                 </div>
-                <div class="campos">
+                <div class="campo_formulario">
                     <button type="submit">Enviar</button>
                 </div>
             </form>
         </section>
+
     </main>
+
     <footer>
-        <p>&copy; 2025 Todos los derechos reservados </p>
+        <p>&copy; 2025 Todos los derechos reservados | Ocampo Garcia Angel Fernando</p>
     </footer>
+
 </body>
 
 </html>
